# kinobot

./: .env.example  .gitignore  CHECKLIST.md  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  STATUS.md  config.py  docker-compose.yml  main.py  pyproject.toml  railway.toml  verify_deployment.py
bot/: __init__.py  loader.py  states.py
bot/handlers/: __init__.py  admin.py  fsm_handlers.py  user.py  user_callbacks.py
bot/keyboards/: __init__.py  admin.py  user.py
bot/middlewares/: __init__.py  db.py  subscription.py  throttling.py  user.py
db/: __init__.py  base.py  constants.py  init_db.py  models.py
db/repositories/: __init__.py  admin_repo.py  broadcast_repo.py  channel_repo.py  movie_repo.py  series_repo.py  settings_repo.py  stats_repo.py  user_repo.py
services/: __init__.py  backup.py  broadcaster.py  scheduler.py  search.py  stats.py  subscription.py  userbot.py
tests/: conftest.py  test_repositories.py
utils/: __init__.py  helpers.py  logging.py  texts.py
