[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kinobot"
version = "0.1.0"
description = "Telegram bot for streaming movies and TV series"
requires-python = ">=3.11"
dependencies = [
    "aiogram[fast,redis]==3.4.0",
    "pyrogram==2.0.106",
    "sqlalchemy[asyncio]==2.0.23",
    "asyncpg==0.29.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "apscheduler==3.10.4",
    "structlog==24.1.0",
    "aioredis==2.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.23.2",
    "pytest-cov==4.1.0",
    "ruff==0.1.11",
    "black==23.12.1",
    "mypy==1.7.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
